--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body{
     background-color: rgb(170 166 195)
 }
 .bg-tertiary{
-    background-color: rgb(16, 12, 48);
+    background-color: #151030;
 }
 
 /* per la linea laterale del'hero */
